--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,7 @@ phases:
   build:
     commands:
       - echo "Hello World from BuildSpec.yml"
+      - echo "$EMILE_SECRET"
 
 artifacts:
   files:
