--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,8 +1,8 @@
 version: 0.2
 
 env:
-    parameter-store:
-        name: name
+  secrets-manager:
+    MY_SECRET: "emile:test"
 
 phases:
   build:
