--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,7 @@ phases:
   build:
     commands:
       - echo "Hello World from BuildSpec.yml"
-      - echo "$name"
+      - echo "$MY_SECRET"
 
 artifacts:
   files:
