--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,11 +13,11 @@ phases:
   build:
     commands:
       - echo "Building Docker image..."
-      - docker build -t my-image:latest .
+      - docker build -t emilesherrott/pottery-db:latest .
   post_build:
     commands:
       - echo "Pushing Docker image..."
-      - docker push my-image:latest
+      - docker push emilesherrott/pottery-db:latest
 
 artifacts:
   files:
