--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,14 +2,22 @@ version: 0.2
 
 env:
   secrets-manager:
-    SECRET_USERNAME: "pipeline-docker-credentials-2:username"
-    SECRET_PASSWORD: "pipeline-docker-credentials-2:password"
+    SECRET_USERNAME: "pipeline-docker-credentials:username"
+    SECRET_PASSWORD: "pipeline-docker-credentials:password"
 
 phases:
+  pre_build:
+    commands:
+      - echo Logging in to Docker registry...
+      - echo "$SECRET_PASSWORD" | docker login -u "$SECRET_USERNAME" --password-stdin
   build:
     commands:
-      - echo "Hello World from BuildSpec.yml"
-      - echo "$SECRET_USERNAME"
+      - echo "Building Docker image..."
+      - docker build -t emilesherrott/pottery-db:latest .
+  post_build:
+    commands:
+      - echo "Pushing Docker image..."
+      - docker push emilesherrott/pottery-db:latest
 
 artifacts:
   files:
