Add secrets manager details to buildspec.yml

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,9 +1,16 @@
 version: 0.2
 
+env:
+  secrets-manager:
+    SECRET_USERNAME: "docker-credentials:username"
+    SECRET_PASSWORD: "docker-credentials:password"
+
 phases:
   build:
     commands:
-      - echo "Hello World from BuildSpec.yml"
+      - echo "Hello World from BuildSpec.yml reveal your secrets,"
+      - echo "$SECRET_USERNAME"
+
 artifacts:
   files:
     - Dockerfile
